<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/_1sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_7sdp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_menu"
            android:contentDescription="@string/deskripsi"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/ic_launcher_background"/>
        <TextView
            android:id="@+id/tv_tittle"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_toEndOf="@id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_des"
            android:layout_below="@id/tv_tittle"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_toEndOf="@id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_below="@id/tv_des"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_toEndOf="@id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/black"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>