<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/img_cover"
        android:contentDescription="@string/deskripsi"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_launcher_background"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_detail"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_100sdp"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">
            <LinearLayout
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textSize="@dimen/_17ssp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/coklat"/>
                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableStart="@drawable/baseline_call_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    tools:ignore="UseCompatTextViewDrawableXml" />
                <TextView
                    android:id="@+id/tv_open"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableStart="@drawable/baseline_access_time_filled_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    tools:ignore="UseCompatTextViewDrawableXml" />
                <TextView
                    android:id="@+id/tv_web"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableStart="@drawable/baseline_cloud_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/black"
                    tools:ignore="UseCompatTextViewDrawableXml" />
            </LinearLayout>
            <ImageButton
                android:id="@+id/btn_maps"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:contentDescription="@string/deskripsi"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/location"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_menu"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_below="@id/card_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textStyle="bold"
        android:layout_marginVertical="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        tools:listitem="@layout/row_menu"
        android:layout_below="@id/tv_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>